@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - implicit modification of PATH is now removed
+    (was deprecated in 0.11)
 
 0.19      2017-10-03 06:32:05 -0400
   - For MSWin32 download binaries of nasm to avoid MSYS
